force-app/main/default/objects/EC_ReqDelivery_Date_LeadTime__mdt/EC_ReqDelivery_Date_LeadTime__mdt.object-meta.xml
<CustomObject>
    <label>Req Delivery Date Lead Time</label>
    <pluralLabel>Req Delivery Date Lead Times</pluralLabel>
</CustomObject>