force-app/main/default/objects/EC_ReqDelivery_Date_LeadTime__mdt/fields/EC_Date_Type__c.field-meta.xml
<CustomField>
    <fullName>EC_Date_Type__c</fullName>
    <label>Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
                <default>true</default>
                <label>Business</label>
            </value>
            <value>
                <fullName>Calendar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>