force-app/main/default/objects/EC_ReqDelivery_Date_LeadTime__mdt/fields/EC_Days__c.field-meta.xml
<CustomField>
    <fullName>EC_Days__c</fullName>
    <label>Days</label>
    <length>30</length>
    <type>Text</type>
</CustomField>