force-app/main/default/objects/EC_ReqDelivery_Date_LeadTime__mdt/fields/Rush_Order_Days__c.field-meta.xml
<CustomField>
    <fullName>Rush_Order_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rush Order Days</description>
    <inlineHelpText>Rush Order Days</inlineHelpText>
    <label>Rush Order Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>